--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -18,7 +18,8 @@
 
 // For example:
 //
- @import '../vendor/bootstrap/less/bootstrap.less';
+ //@import '../vendor/bootstrap/less/bootstrap.less';
+ @import (css) '../vendor/bootstrap-superhero/bootstrap.min.css';
  @import '../vendor/fontawesome/less/font-awesome.less';
  @import 'main-style.less';
 // @import 'pages/signup.less';
