--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -21,6 +21,7 @@
  //@import '../vendor/bootstrap/less/bootstrap.less';
  @import (css) '../vendor/bootstrap-flatly/bootstrap.min.css';
  @import '../vendor/fontawesome/less/font-awesome.less';
+ @import (css) 'flags.css';
  @import 'main-style.less';
 // @import 'pages/signup.less';
 //
