--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,7 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/flags.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
